@@ -7,6 +7,7 @@ procps-ng-NEXT
     external: schedule class added to pids api
     external: disk sleep added to pids api, sleep revised  issue #265
     external: docker containers added to pids api
+    external: procps_users new exported function
   * pgrep: select process by environment variable          issue #167
   * ps: Add environ field
   * ps: Add htprv and htshr fields for HugeTables
